--- a/frontend/src/app/layout/topbar/topbar.component.html
+++ b/frontend/src/app/layout/topbar/topbar.component.html
@@ -1,29 +1,14 @@
-<header class="topbar">
-  <h2 class="title">{{ app_name }}</h2>
-
-  <div class="topbar-center">
-    <ng-content></ng-content>
-  </div>
-
-  <!-- Container para avatar + popup -->
-  <div class="avatar-container">
-    <div class="avatar" (click)="toggleProfile()"></div>
-
-    <!-- POPUP -->
-    <div class="profile-popup" *ngIf="profileOpen">
-      <div class="profile-info">
-        <img class="profile-img" 
-             src="https://img.freepik.com/vetores-gratis/circulo-azul-com-usuario-branco_78370-4707.jpg?semt=ais_hybrid&w=740&q=80">
-        @if (user) {
-        <div class="userinfo">
-          <strong>{{ user.firstName }}</strong>
-          <p>{{ user.email }}</p>
-        </div>
-      }
-      </div>
-
-      <button class="logout-btn" (click)="logout()">Logout</button>
-    </div>
-  </div>
-
-</header>
+<!-- Header Section -->
+<div class="flex items-center justify-between p-4 sticky top-0 z-20 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-transparent dark:border-gray-800/50">
+<div class="flex items-center gap-3">
+<div class="bg-center bg-no-repeat bg-cover rounded-full h-10 w-10 ring-2 ring-primary/20 cursor-pointer" data-alt="User profile picture showing a smiling person" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD8EqC5ZxYXZk205aeYeFNWWZHC3bBDGu0l9BndtOo-3T1g93K0LtiCTkQ4kEWTJQDav2e_ZqtPhgIKY2Tsw9b4r_-Vqmy-H5IlHsZIYmIFugVn5ny7LvBAIeJTlsnQkhS9bdZVGlp8QljsYsRXkuL5TS3PAMd73gnuY0C8F4zfnf-PWQ_NZ09eZFOH66-DHcJJLDGKvqT56zhQu8L_XQ_cVQtLYwml-MdpQHFzzm_V8JaWUceGVRD6rhPpiMRjemkNgDkn9Sb4yl3S");'></div>
+<div class="flex flex-col">
+<p class="text-xs text-gray-500 dark:text-gray-400 font-medium">Good Morning,</p>
+<h2 class="text-lg font-bold leading-tight">Alex!</h2>
+</div>
+</div>
+<button class="relative p-2 text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-800 rounded-full transition-colors">
+<span class="material-symbols-outlined">notifications</span>
+<span class="absolute top-2 right-2 h-2.5 w-2.5 rounded-full bg-primary border-2 border-background-light dark:border-background-dark"></span>
+</button>
+</div>
