--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -1,8 +1,9 @@
+
 <div class="layout-wrapper">
   
   <app-topbar></app-topbar>
 
-    <main class="content">
+    <main class="bg-background-light dark:bg-background-dark min-h-screen flex flex-col font-display text-[#111318] dark:text-white pb-28 selection:bg-primary selection:text-white">
       <router-outlet></router-outlet>
     </main>
 
