--- a/frontend/src/app/pages/authenticaded/settings/settings.component.html
+++ b/frontend/src/app/pages/authenticaded/settings/settings.component.html
@@ -1,44 +1,1 @@
-<!-- HEADER -->
-<header class="top-header">
-  <h2>{{page_name}}</h2>
-</header>
-
-<div class="content">
-<button class="btn" (click)="openPopupAccountCreate()">Criar Conta</button>
-@if (loadingAccounts) {
-  <p>Carregando contas...</p>
-} @else if (accountList.length > 0) {
-  <ul>
-    @for (account of accountList; track account.id) {
-      <li>{{ account.name }}</li>
-    }
-  </ul>
-} @else {
-  <p>Nenhuma conta cadastrada</p>
-}
-
-@if (isAccountCreateOpen) {
-
-    <div class="popup-overlay">
-    <div class="popup">
-      <h3>Nova Conta</h3>
-
-      <form (ngSubmit)="saveAccount()">
-        Nome da conta:
-        <input
-          type="text"
-          [(ngModel)]="accountName"
-          name="accountName"
-          required
-        />
-
-        <button type="submit">Salvar</button>
-        <button type="button" (click)="closePopupAccountCreate()">Cancelar</button>
-      </form>
-
-    </div>
-  </div>
-
-}
-
-</div>
+Settings
