--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -76,7 +76,7 @@
 
       <!-- BOTÃO -->
       <button class="w-full bg-primary text-white font-bold py-4 rounded-xl transition-all" [disabled]="loading">
-        {{ loading ? 'LOGGING...' : 'Login' }}
+        {{ loading ? 'Logging...' : 'Login' }}
       </button>
     </form>
 
