--- a/frontend/src/app/layout/topbar/topbar.component.html
+++ b/frontend/src/app/layout/topbar/topbar.component.html
@@ -1,14 +1,29 @@
 <!-- Header Section -->
-<div class="flex items-center justify-between p-4 sticky top-0 z-20 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-transparent dark:border-gray-800/50">
-<div class="flex items-center gap-3">
-<div class="bg-center bg-no-repeat bg-cover rounded-full h-10 w-10 ring-2 ring-primary/20 cursor-pointer" data-alt="User profile picture showing a smiling person" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD8EqC5ZxYXZk205aeYeFNWWZHC3bBDGu0l9BndtOo-3T1g93K0LtiCTkQ4kEWTJQDav2e_ZqtPhgIKY2Tsw9b4r_-Vqmy-H5IlHsZIYmIFugVn5ny7LvBAIeJTlsnQkhS9bdZVGlp8QljsYsRXkuL5TS3PAMd73gnuY0C8F4zfnf-PWQ_NZ09eZFOH66-DHcJJLDGKvqT56zhQu8L_XQ_cVQtLYwml-MdpQHFzzm_V8JaWUceGVRD6rhPpiMRjemkNgDkn9Sb4yl3S");'></div>
-<div class="flex flex-col">
-<p class="text-xs text-gray-500 dark:text-gray-400 font-medium">Good Morning,</p>
-<h2 class="text-lg font-bold leading-tight">Alex!</h2>
-</div>
-</div>
-<button class="relative p-2 text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-800 rounded-full transition-colors">
-<span class="material-symbols-outlined">notifications</span>
-<span class="absolute top-2 right-2 h-2.5 w-2.5 rounded-full bg-primary border-2 border-background-light dark:border-background-dark"></span>
-</button>
+<div
+  class="flex items-center justify-between p-4 sticky top-0 z-20 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-transparent dark:border-gray-800/50">
+  <button routerLink="/profile">
+    <div class="flex items-center gap-3">
+      <div class="bg-center bg-no-repeat bg-cover rounded-full h-10 w-10 ring-2 ring-primary/20 cursor-pointer"
+        data-alt="User profile picture showing a smiling person"
+        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD8EqC5ZxYXZk205aeYeFNWWZHC3bBDGu0l9BndtOo-3T1g93K0LtiCTkQ4kEWTJQDav2e_ZqtPhgIKY2Tsw9b4r_-Vqmy-H5IlHsZIYmIFugVn5ny7LvBAIeJTlsnQkhS9bdZVGlp8QljsYsRXkuL5TS3PAMd73gnuY0C8F4zfnf-PWQ_NZ09eZFOH66-DHcJJLDGKvqT56zhQu8L_XQ_cVQtLYwml-MdpQHFzzm_V8JaWUceGVRD6rhPpiMRjemkNgDkn9Sb4yl3S");'>
+      </div>
+      <div class="flex flex-col">
+
+        <p class="text-xs text-gray-500 dark:text-gray-400 font-medium">Good Morning,</p>
+        <h2 class="text-lg font-bold leading-tight">
+          <span *ngIf="(authService.user$ | async) as user">
+            {{ user.firstName }}
+          </span>
+        </h2>
+      </div>
+    </div>
+  </button>
+
+  <button routerLink="/notifications"
+    class="relative p-2 text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-800 rounded-full transition-colors">
+    <span class="material-symbols-outlined">notifications</span>
+    <span
+      class="absolute top-2 right-2 h-2.5 w-2.5 rounded-full bg-primary border-2 border-background-light dark:border-background-dark"></span>
+  </button>
+
 </div>
