--- a/frontend/src/app/pages/authenticaded/partials/calendar-bar/calendar-bar.component.html
+++ b/frontend/src/app/pages/authenticaded/partials/calendar-bar/calendar-bar.component.html
@@ -49,13 +49,25 @@
 </div>
 </div>
 <div class="mt-2 text-center">
-   <p *ngIf="streak > 0"
-   class="text-xs font-medium text-gray-500 dark:text-gray-400 flex items-center justify-center gap-1">
-  <span class="material-symbols-outlined text-orange-500 text-sm">
-    local_fire_department
-  </span>
-  {{ streak }} Day{{ streak > 1 ? 's' : '' }} Streak!
-</p>
+@let streak = (streak$ | async);
+
+@if (streak !== null && streak !== undefined) {
+  @if (streak > 0) {
+    <p class="text-xs font-medium text-gray-500 dark:text-gray-400 flex items-center justify-center gap-1">
+      <span class="material-symbols-outlined text-orange-500 text-sm">
+        local_fire_department
+      </span>
+      {{ streak }} Day{{ streak > 1 ? 's' : '' }} Streak!
+      — {{ streak > 1 ? getRandomMessage() : '' }}
+    </p>
+  } @else {
+    <p class="text-xs font-medium text-gray-500 dark:text-gray-400 flex items-center justify-center gap-1">
+      Start your streak today 💪
+    </p>
+  }
+}
+
+
 <!-- <p class="text-xs font-medium text-gray-500 dark:text-gray-400 flex items-center justify-center gap-1">
 <span class="material-symbols-outlined text-orange-500 text-sm">local_fire_department</span>
                 2 Day Streak! Keep the momentum going.
