--- a/frontend/src/app/pages/authenticaded/profile/profile.component.html
+++ b/frontend/src/app/pages/authenticaded/profile/profile.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="(authService.user$ | async) as user" class="layout-wrapper">
+<main
+    class="bg-background-light dark:bg-background-dark min-h-screen flex flex-col font-display text-[#111318] dark:text-white pb-28 selection:bg-primary selection:text-white">
+
+    <div *ngIf="(authService.user$ | async) as user" class="layout-wrapper">
 
         <div
             class="flex items-center justify-between px-6 py-5 sticky top-0 z-20 bg-background-light/90 dark:bg-background-dark/90 backdrop-blur-md">
@@ -20,7 +23,7 @@
                     <span class="material-symbols-outlined text-[16px] block">photo_camera</span>
                 </div>
             </div>
-            <h2  class="text-2xl font-bold">{{user.fullName}}</h2>
+            <h2 class="text-2xl font-bold">{{user.fullName}}</h2>
             <p class="text-gray-500 dark:text-gray-400 text-sm font-medium mb-6">@{{user.username}}</p>
             <div class="grid grid-cols-3 gap-3 w-full max-w-sm">
                 <div
@@ -127,12 +130,12 @@
         </div>
         <div style="padding-left: 20%; padding-right: 20%;">
             <!-- BOTÃO -->
-      <button class="w-full bg-red-500 hover:bg-red-600 text-white font-bold py-3 rounded transition-all" (click)="logout()">
-        Logout
-      </button>
+            <button class="w-full bg-red-500 hover:bg-red-600 text-white font-bold py-3 rounded transition-all"
+                (click)="logout()">
+                Logout
+            </button>
 
         </div>
-
+    </div>
     <app-footer></app-footer>
-
-</div>
+</main>
